--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+"scripts": {
+  "start": "node api/server.js",
+  "dev": "nodemon api/server.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
