firebase admin installed

--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "firebase-admin": "^13.6.0",
     "mongodb": "^7.0.0"
   },
   "name": "plate-share-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-"scripts": {
-  "start": "node api/server.js",
-  "dev": "nodemon api/server.js"
-},
+  "scripts": {
+    "start": "node api/server.js",
+    "dev": "nodemon api/server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
