--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,13 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "api/server.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/api/server.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+      "status": 404,
+      "dest": "/api/server.js"
     }
   ]
 }
-
-
-
